added smaller image

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container">
                 <a class="navbar-brand" href="index.html">
-                    <img src="assets/images/logo_pikeandpine.png" alt="Pike & Pine Logo" id="logo">
+                    <img src="assets/images/logo_pikeandpine.png" alt="Pike & Pine Logo" id="logo" class="header-logo">
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -36,13 +36,7 @@
                             <a class="nav-link" href="products.html">Products</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="docs.html">Docs</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="privacy.html">Privacy</a>
                         </li>
                     </ul>
                 </div>
@@ -50,7 +44,18 @@
         </nav>
     </header>
     <!-- Page specific content goes here -->
-    
+
+    <!-- Footer -->
+    <footer class="bg-light text-center text-lg-start">
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
+            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link" href="privacy.html">Privacy</a>
+            <div>
+                © 2023 Pike & Pine Software LLC
+            </div>
+        </div>
+    </footer>
+
     <!-- Scripts -->
     <script src="assets/js/scripts.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" 
