--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <!-- Common header for all pages -->
     <header>
         <!-- Bootstrap 5 Navbar -->
@@ -30,31 +30,45 @@
                             <a class="nav-link" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="about.html">About</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link" href="products.html">Products</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="docs.html">Docs</a>
                         </li>
+                        <!-- <li class="nav-item">
+                        </li> -->
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
     <!-- Page specific content goes here -->
-
-    <!-- Footer -->
-    <footer class="bg-light text-center text-lg-start">
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.05);">
-            <a class="nav-link" href="contact.html">Contact</a>
-            <a class="nav-link" href="privacy.html">Privacy</a>
-            <div>
-                © 2023 Pike & Pine Software LLC
+    <div class="container my-auto">
+        <div class="row">
+            <div class="col-12 text-center">
+                <a href="index.html">
+                    <img src="assets/images/logo_pikeandpine.png" alt="Pike & Pine Logo" id="logo" class="mx-auto d-block">
+                </a>
+                <p class="coming-soon">Coming Soon.</p>
             </div>
         </div>
-    </footer>
+    </div>
+
+<!-- Footer -->
+<footer class="mt-auto bg-light text-center">
+    <div class="footer-content p-3">
+        <div class="footer-links">
+            <a class="nav-link" href="contact.html">Contact</a> |
+            <a class="nav-link" href="about.html">About</a> |
+            <a class="nav-link" href="privacy.html">Privacy</a> |
+            <a class="nav-link" href="terms.html">Terms</a>
+        </div>
+        <div class="footer-copy">
+            © 2023 Pike & Pine Software LLC
+        </div>
+    </div>
+</footer>
+
 
     <!-- Scripts -->
     <script src="assets/js/scripts.js"></script>
